--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Insure landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,70 +16,87 @@
 </head>
 <body>
 
-  How we work
-  Blog
-  Account
-  View plans
+  <nav>
+    <ul>
+      <li>How we work</li>
+      <li>Blog</li>
+      <li>Account</li>
+      <li>View plans</li>
+    </ul>
+  </nav>
 
-  Humanizing your insurance.
+  <section>
+    <h1>Humanizing your insurance.</h1>
+    <p>Get your life insurance coverage easier and faster. We blend our expertise<br>
+    and technology to help you find the plan that’s right for you. Ensure you<br>
+    and your loved ones are protected.</p>
+    <button>View plans</button>
+  </section>
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+  <section>
+    <h2>We’re different</h2>
+    <article>
+      <h3>Snappy Process</h3>
+      <p>Our application process can be completed in minutes, not hours. Don’t get
+      stuck filling in tedious forms.</p>
+    </article>
+    <article>
+      <h3>Affordable Prices</h3>
+      <p>We don’t want you worrying about high monthly costs. Our prices may be low,
+      but we still offer the best coverage possible.</p>
+    </article>
+    <article>
+      <h3>People First</h3>
+      <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make
+      sure you’re covered when you need it.</p>
+    </article>
+  </section>
 
-  View plans
+  <section>
+    <h2>Find out more about how we work</h2>
+    <button>How we work</button>
+  </section>
 
-  We’re different
+  <footer>
+    <article>
+      <h4>Our company</h4>
+      <ul>
+        <li>How we work</li>
+        <li>Why Insure?</li>
+        <li>View plans</li>
+        <li>Reviews</li>
+      </ul>
+    </article>
+    <article>
+      <h4>Help me</h4>
+      <ul>
+        <li>FAQ</li>
+        <li>Terms of use</li>
+        <li>Privacy policy</li>
+        <li>Cookies</li>
+      </ul>
+    </article>
+    <article>
+      <h4>Contact</h4>
+      <ul>
+        <li>Sales</li>
+        <li>Support</li>
+        <li>Live chat</li>
+      </ul>
+    </article>
+    <article>
+      <h4>Others</h4>
+      <ul>
+        <li>Careers</li>
+        <li>Press</li>
+        <li>Licenses</li>
+      </ul>
+    </article>
+  </footer>
 
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Julian Phillips</a>.
   </div>
 </body>
 </html>
