Added Stylus to the project. Added a styles folder. Converted headers in the footer to p tags. Connected fonts from google fonts.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="./styles/css/index.css">
 </head>
 <body>
 
@@ -59,7 +61,7 @@
 
   <footer>
     <article>
-      <h4>Our company</h4>
+      <p>Our company</p>
       <ul>
         <li>How we work</li>
         <li>Why Insure?</li>
@@ -68,7 +70,7 @@
       </ul>
     </article>
     <article>
-      <h4>Help me</h4>
+      <p>Help me</p>
       <ul>
         <li>FAQ</li>
         <li>Terms of use</li>
@@ -77,7 +79,7 @@
       </ul>
     </article>
     <article>
-      <h4>Contact</h4>
+      <p>Contact</p>
       <ul>
         <li>Sales</li>
         <li>Support</li>
@@ -85,7 +87,7 @@
       </ul>
     </article>
     <article>
-      <h4>Others</h4>
+      <p>Others</p>
       <ul>
         <li>Careers</li>
         <li>Press</li>
